--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- This is the title that appears in your browser tab -->
-  <title>HVY Letters</title>
+  <title>Stonewebsite</title>
 
   <!-- This is a bunch of meta tags for search engine optimization (SEO) and for when you share your site with other people! -->
   <!-- Many of these tags were invented by Facebook and are called the Open Graph protocol, more info here: https://ogp.me/ -->
-  <meta name="author" content="TODO: Your name goes here!">
+  <meta name="author" content="Michael Prisco">
   <meta name="keywords" content="TODO: A bunch of tags separated by commas!">
-  <meta name="description" content="TODO: A short description of your site!">
-  <meta property="og:url" content="TODO: Your site’s final URL!">
-  <meta name="og:title" property="og:title" content="TODO: The name of your site!">
-  <meta property="og:description" content="TODO: A short description of your site!">
+  <meta name="description" content="It's a stone website!">
+  <meta property="og:url" content="www.stonewebsite.com">
+  <meta name="og:title" property="og:title" content="www.stonewebsite.com">
+  <meta property="og:description" content="It's a stone website!">
 
   <!-- This is the thumbnail that appears when you share your site -->
   <!-- It should be 1200x630 pixels -->
@@ -35,7 +35,6 @@
 
 html, body {
   overscroll-behavior: none;
-  /* overflow: hidden; */
 }
 
 body {
@@ -53,11 +52,9 @@ body {
 
 .feed-img {
   background-image: url("assets/Timelapse-Test-6.png");
-  background-size: contain; /* keep natural aspect ratio */
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: top center;
-
-  /* This is important: let height follow natural aspect ratio */
   aspect-ratio: 1080 / 1920; portrait ratio
 }
 
@@ -74,10 +71,10 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
-  z-index: 9999; /* above grain canvas */
+  z-index: 9999;
 }
 
-/* Blinking green dot */
+/* -------------------- LIVE -------------------- */
 .live-dot {
   width: 10px;
   height: 10px;
@@ -122,8 +119,8 @@ body {
       document.getElementById("live-time").textContent = `${hh}:${mm}:${ss}`;
     }
 
-    updateClock();                // initialize immediately
-    setInterval(updateClock, 1000); // update every second
+    updateClock();
+    setInterval(updateClock, 1000);
   };
 
   var options = {
